# udemy-clone

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/alembic/: env.py
src/alembic/versions/: 01ca1f9a7356_create_enrollments_table.py  02505c0b196a_create_user_table.py  05d1349b9c0c_creating_lessonprogess_table.py  219fbf900bee_create_user_table.py  6b0c608effcb_creating_user_table.py  6b1855bea1d5_creating_cart_and_cartitem_tables.py  8d98c3932542_creating_reviews_table.py  a6fef710a98d_creating_cart_and_cartitem_tables.py  add_cancelled_to_enrollmentstatus.py  afc42138d510_creating_lessonprogess_table.py  bf612eaac826_creating_password_reset_tokens_table.py  d57a9746f783_creating_cart_and_cartitem_tables.py  e5dc59aa8e28_create_courses_and_lessons.py  e736e44c4843_creating_reviews_table.py  ec13af1d6f2e_add_server_default_to_published_at.py
src/app/: main.py  models.py
src/app/admin/: __init__.py
src/app/admin/views/: __init__.py  course.py  user.py
src/app/api/v1/: dependencies.py  router.py
src/app/core/: config.py  mail.py  security.py  storage.py
src/app/db/: database.py
src/app/feature/cart/: models.py  (+3 more)
tests/: test_smoke.py
tests/api/: factories.py  test_carts_endpoint.py  test_chat_endpoint.py  test_courses_endpoint.py  test_enrollments_endpoint.py  test_payments_endpoint.py  test_upload_download.py  test_users_endpoint.py
tests/unit/: factories.py  test_password_hashing.py  test_security.py
(+35 files in other folders)
