[project]
name = "udemy-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.49.0",
    "sqlalchemy[asyncio]",
    "alembic",
    "asyncpg",
    "email-validator>=2.0.0",
    "python-jose>=3.5.0",
    "pwdlib[argon2]>=0.3.0",
    "fastapi-mail>=1.6.4",
    "factory-boy>=3.3.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff.lint.per-file-ignores]
"src/alembic/env.py" = ["F401"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]
